--- a/index1.html
+++ b/index1.html
@@ -25,7 +25,7 @@
 		<img src="btsMusicDance.jpg" height="228" width="432" alt="Dark photo of all seven BTS members together."/>
 		<h2> <a href="index5.html"> Sources </a> </h2>
 				
-		<a href="http://validator.w3.org/check?uri=https://schirgerj.github.io/home/">
+		<a href="http://validator.w3.org/check?uri=https://schirgerj.github.io/home/index1.html">
 		<img src="validatorIcon.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics">
 		</a>
 	</body>
