--- a/index4.html
+++ b/index4.html
@@ -30,7 +30,7 @@
 		</ul>	
 		<!-- Explenations for some awards are provided as a subpoint in the list. -->
 		<img id="picture" src="btsBBMAs.jpg" height="640" width="960" alt="BTS group photo at the BBMAs."/>
-		<a href="http://validator.w3.org/check?uri=https://schirgerj.github.io/home/">
+		<a href="http://validator.w3.org/check?uri=https://schirgerj.github.io/home/index4.html">
 		<img src="validatorIcon.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics">
 		</a>
 	</body>
