--- a/index2.html
+++ b/index2.html
@@ -82,7 +82,7 @@
 		</p>
 		<img src = "jungkookImage.jpg" width = "500" height = "500" alt = "Picture of Jungkook of BTS." />
 		<p> Return to the <a href="#top">top</a> of the page.</p>
-		<a href="http://validator.w3.org/check?uri=https://schirgerj.github.io/home/">
+		<a href="http://validator.w3.org/check?uri=https://schirgerj.github.io/home/index2.html">
 		<img src="validatorIcon.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics">
 		</a>
 	</body>
