--- a/index3.html
+++ b/index3.html
@@ -72,7 +72,7 @@
 			
 		
 
-		<a href="http://validator.w3.org/check?uri=https://schirgerj.github.io/home/">
+		<a href="http://validator.w3.org/check?uri=https://schirgerj.github.io/home/index3.html">
 		<img src="validatorIcon.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics">
 		</a>
 	</body>
