--- a/index5.html
+++ b/index5.html
@@ -60,7 +60,7 @@
 		</p>	
 			
 				
-		<a href="http://validator.w3.org/check?uri=https://schirgerj.github.io/home/">
+		<a href="http://validator.w3.org/check?uri=https://schirgerj.github.io/home/index5.html">
 		<img src="validatorIcon.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics">
 		</a>
 	</body>
