--- a/index3.html
+++ b/index3.html
@@ -16,22 +16,46 @@
 			everyong. Explore a song in each genre:			
 		</p>
 		<ul>
-			<li> Pop </li>
-				<li> ie newest song <a href="https://www.youtube.com/watch?v=OEnvXsyGZmU"> Boy with Luv </a></li>
-			<li> Rap </li>
-				<li> ie song sung only by rappers, <a href="https://www.youtube.com/watch?v=L7hZ8Z9sM38"> Outro: Tear </a> </li>
-			<li> EDM </li>
-				<li> ie electronic beat and effects in<a href="https://www.youtube.com/watch?v=zmyUcpA1B6I"> DNA </a> </li>
-			<li> Emo/Dark </li>
-				<li> ie mysterious and alternative style,<a href="https://www.youtube.com/watch?v=XLUdnWsaurU"> Fake Love </a> </li>
-			<li> Rock </li>
-				<li> ie includes electric guitar and heavier sounds in <a href="https://www.youtube.com/watch?v=DpTwtl9_mh0"> Danger </a> </li>
-			<li> Ballad </li>
-				<li> ie calm, melancholic pieces such as <a href="https://www.youtube.com/watch?v=H2HQWHKDREI"> Spring Day </a> </li>
-			<li> Latin </li>
-				<li> ie a few lyrics are in spanish, laid back style <a href="https://www.youtube.com/watch?v=NbE1HqVDEHk"> Airplane Pt 2 </a> </li>
-			<li> Traditionally Korean </li>
-				<li> ie The song <a href="https://www.youtube.com/watch?v=vgJeQvGYYpk"> Idol </a> is not  a traditonal Korean folk song but it features certain traditional instruments and sounds.</li>
+			<li> Pop 
+				<ul>
+					<li> ie newest song <a href="https://www.youtube.com/watch?v=OEnvXsyGZmU"> Boy with Luv </a></li>
+				</ul>
+			</li>
+			<li> Rap 
+				<ul>
+					<li> ie song sung only by rappers, <a href="https://www.youtube.com/watch?v=L7hZ8Z9sM38"> Outro: Tear </a> </li>
+				</ul>
+			</li>
+			<li> EDM 
+				<ul>
+					<li> ie electronic beat and effects in<a href="https://www.youtube.com/watch?v=zmyUcpA1B6I"> DNA </a> </li>
+				</ul>
+			</li>
+			<li> Emo/Dark
+				<ul>
+					<li> ie mysterious and alternative style,<a href="https://www.youtube.com/watch?v=XLUdnWsaurU"> Fake Love </a> </li>
+				</ul>
+			</li>
+			<li> Rock
+				<ul>
+					<li> ie includes electric guitar and heavier sounds in <a href="https://www.youtube.com/watch?v=DpTwtl9_mh0"> Danger </a> </li>
+				</ul>
+			</li>
+			<li> Ballad
+				<ul>
+					<li> ie calm, melancholic pieces such as <a href="https://www.youtube.com/watch?v=H2HQWHKDREI"> Spring Day </a> </li>
+				</ul>
+			</li>
+			<li> Latin
+				<ul>
+					<li> ie a few lyrics are in spanish, laid back style <a href="https://www.youtube.com/watch?v=NbE1HqVDEHk"> Airplane Pt 2 </a> </li>
+				</ul>
+			</li>
+			<li> Traditionally Korean
+				<ul>
+					<li> ie The song <a href="https://www.youtube.com/watch?v=vgJeQvGYYpk"> Idol </a> is not  a traditonal Korean folk song but it features certain traditional instruments and sounds.</li>
+				</ul>
+			</li>
 		</ul>
 		<!-- Short explenations for some songs and genres are included-->
 		
