--- a/index4.html
+++ b/index4.html
@@ -19,12 +19,18 @@
 		<ul>
 			<li> Billboard Top Social Artist (2017,2018,2019)</li>
 			<li> Billboard Best Group (2019)</li>
-			<li> Daesang at MAMA Awards (2018)</li>
-				<li> Daesang is the largest Asian award possible to recieve</li>
+			<li> Daesang at MAMA Awards (2018)
+				<ul>
+					<li> Daesang is the largest Asian award possible to recieve</li>
+				</ul>
+			</li>
 			<li> iHeartRadio Best Boyband (2019)</li>
 			<li> iHeartRadio Best Fans (2019)</li>
-			<li> BreakTudo Awards, All Nominated Categories (2018)</li>
-				<li> BreakTudo is a famous Brazilian awards show</li>
+			<li> BreakTudo Awards, All Nominated Categories (2018)
+				<ul>
+					<li> BreakTudo is a famous Brazilian awards show</li>
+				</ul>
+			</li>
 			<li> E! People&rsquo;s Choice Awards (2018)</li>
 			<li> MTV Europe Music Award (2018)</li>	
 		</ul>	
