--- a/index1.html
+++ b/index1.html
@@ -17,6 +17,7 @@
 			Since then, their popularity has grown at an exponential rate and they continue to get discovered by new fans around the world every day.
 			
 		</p>
+		<!-- Links to other pages  offered by the site-->
 		<h2> Meet the <a href="index2.html"> Members </a> </h2>
 		<img src="membersTogether.png" height="262" width="439" alt="Dark photo of all seven BTS members together."/>
 		<h2> Learn their <a href="index4.html"> Achievements </a> </h2>
