--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,7 @@
 	<body>
 		<h1 id="top" class = "heading"> This is BTS. </h1>
 		<h2> Meet the Members </h2> 
+		<!-- There is a short explenation of each member's role and how he came to join BTS.-->
 		<h3 class = "heading"> RM </h3>
 		<p> 
 			RM also known as Kim Namjoon is the leader and spokesperson of BTS. He is 25 years old and was the first member to sign with their record company
@@ -72,7 +73,7 @@
 		<img src = "vImage.jpg" width = "715" height = "473" alt = "Picture of V of BTS." />	
 		<h3 class = "heading"> Jungkook </h3>
 		<p> 
-			Jungkook, whose full name is Jeon Jungkook is the main volcalist of BTS. He is the youngest at 21 years old. He is called the&ldquo;Golden Maknae&rdquo; of the group. In Korean, 
+			Jungkook, whose full name is Jeon Jungkook is the main volcalist of BTS. He is the youngest at 21 years old. He is called the&ldquo; Golden Maknae&rdquo; of the group. In Korean, 
 			&ldquo;maknae&rdquo; means the youngest one and he is  called &ldquo;golden&rdquo; since he is said to be good at everything. Even if his role is main vocalist, he can also rap, dance, play 
 			sports, study well, and is also considered very good-looking. Before become this valued and appreciated in BTS, Jungkook wanted to start his carrer as a singer since his early
 			tenage years. Thus, he participated in a Korean singing contest called &ldquo;Superstar K&rdquo;. Unfortunately, Jungkook was cut from the show before the show was aired and he was not exposed
